# speedogift

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  api draft.txt  build.sh  check_dep.sh
client/src/: ClientActions.cpp  ClientActions.h  ClientProcessor.cpp  ClientProcessor.h  SpeedogiftClient.cpp
server/src/: Client.cpp  Client.h  ServerActions.cpp  ServerActions.h  ServerProcessor.cpp  ServerProcessor.h  SpeedogiftServer.cpp
shared/src/: API.cpp  API.h  APIAuth.cpp  APIAuth.h  APIAuthChange.cpp  APIAuthChange.h  APIAuthChangeReply.cpp  APIAuthChangeReply.h  APIAuthReply.cpp  APIAuthReply.h  APIFactory.cpp  APIFactory.h  APIList.h  APIListReply.cpp  APIListReply.h  APISend.cpp  APISend.h  APISendData.cpp  APISendData.h  APISendDataReply.cpp  APISendDataReply.h  APISendReply.cpp  APISendReply.h  Actions.h  Boilerplate.h  ProcessAPI.cpp  ProcessAPI.h  Processor.h
